--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
-    "mongoose-unique-validator": "^5.0.0"
+    "mongoose-unique-validator": "^5.0.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.3"
   },
   "description": ""
 }
