--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "image-size": "^1.1.1",
     "imagemin": "^8.0.1",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^9.0.2",
@@ -18,7 +19,8 @@
     "mongoose": "^8.2.1",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.3"
+    "sanitize-html": "^2.13.0",
+    "sharp": "^0.32.6"
   },
   "description": ""
 }
