--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.41.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.13.0",
+    "sharp": "^0.33.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
